# nnfusion

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  Readme.md  SECURITY.md  THIRDPARTYNOTICES.txt  core  model.json  parse_code.py  pre_compiled.json  qlinear_kernel_replace.py  setup.py  tf.py
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxyfile.in
nnfusion/src/nnfusion/engine/: CMakeLists.txt  async_manager.hpp  engine.hpp  memory_allocator.hpp  op.cpp  op.hpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake  conv_code.cu  conv_cudnn.cc  conv_fused.cu  pointwise_conv.cu  pointwise_conv_fused.cu
src/contrib/custom_op/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake  custom_op.cpp  custom_op.h
src/contrib/custom_op/json/: custom_test_op.json
src/contrib/custom_op/native/: custom_test_op.cpp  grid_sample_op.cpp
src/contrib/custom_op/script/: ArgMax.py  CustomOP.py  GridSample.py  README.md  Round.py  TemplateAntaresOperator.py  TemplateHLSLOperator.py  TensorAdd.py  TopK.py  __main__.py  __operator__.py  op.json
src/nnfusion/: CMakeLists.txt  Makefile  cmake_install.cmake
src/nnfusion/common/: CMakeLists.txt  Makefile  axis_set.cpp  axis_set.hpp  axis_vector.cpp  axis_vector.hpp  cmake_install.cmake  code_writer.cpp  code_writer.hpp  common.hpp  coordinate.cpp  coordinate.hpp  coordinate_diff.cpp  coordinate_diff.hpp  device_type.cpp  device_type.hpp  dimension.cpp  dimension.hpp  languageunit.cpp  languageunit.hpp  partial_shape.cpp  partial_shape.hpp  rank.hpp  sha256.cpp  sha256.hpp  shape.cpp  shape.hpp  strides.cpp  strides.hpp  symbolic_shape.cpp  symbolic_shape.hpp  type_info.cpp  type_info.hpp  util.cpp  util.hpp
src/nnfusion/core/: CMakeLists.txt  Makefile  cmake_install.cmake
src/nnfusion/engine/: CMakeLists.txt  Makefile  async_manager.cpp  async_manager.hpp  cmake_install.cmake  engine.cpp  engine.hpp  interpreter.cpp  interpreter.hpp  memory_allocator.cpp  memory_allocator.hpp  op.cpp  op.hpp
src/nnfusion/frontend/: CMakeLists.txt  Makefile  cmake_install.cmake  frontend_base.hpp
src/nnfusion/util/: CMakeLists.txt  Makefile  cmake_install.cmake  curl_request.hpp  errors.hpp  logging.cpp  logging.hpp  type_info.cpp  util.hpp
src/python/example/: README.md  bert.py  bwd.py  data_loader.py  hf_train.py  main.py  main_diff.py  mnist.py  rnn.py  xbox.py
src/python/nnf/: data_format.py  description.py  dtypes.py  executor.py  runner.py  session.py  trainer.py  utils.py
src/python/nnfusion/: __init__.py  __main__.py  config.py  data_format.py  description.py  dtypes.py  executor.py  inference.py  jit.py  jit_utils.py  runner.py  runtime.py  session.py  trainer.py  utils.py
src/python/pyfusion/: issue.py  test.py  test_fusion.py
src/resource/: CMakeLists.txt  header_rewrite.cpp  header_rewrite.hpp  main.cpp  uncomment.cpp  uncomment.hpp  util.cpp  util.hpp
src/tools/: CMakeLists.txt  Makefile  cmake_install.cmake
src/tools/nnfusion/: CMakeLists.txt  Makefile  cmake_install.cmake  nnfusion.cpp
src/tools/serialize/: CMakeLists.txt  Makefile  cmake_install.cmake
src/tools/superscaler/: nnfusion_dp_single_host.sh
test/: CMakeLists.txt  main.cpp
test/models/: CMakeLists.txt
test/models/onnx/: abs.onnx  acos.onnx  adam_optimizer_op.onnx  and.onnx  argmax_float32_no_keep_dims.onnx  avg_pool_1d_default.onnx  batch_mat_mul.onnx  ceil.onnx  conv1d.onnx  custom_op.onnx  floor.onnx  gather_nd_3.onnx  gather_nd_4.onnx  gather_nd_5.onnx  gathernd_grad_axis_0.onnx  gathernd_grad_axis_1.onnx  gelu.onnx  gru_bidirectional.onnx  layer_norm_grad_op.onnx  log.onnx  matmul_op_1.onnx  matmul_op_4.onnx  matmul_op_5.onnx  matmul_op_7.onnx  matmul_op_8.onnx  pow.onnx  resize_downsample_scales_linear.onnx  resize_upsample_scales_linear.onnx  resize_upscale_align_corners.onnx  roll.onnx  scatter_nd_1.onnx  sigmoid.onnx  sin.onnx  slice.onnx  softmax_axis_1.onnx  sparse_softmax_cross_entropy_op.onnx  tan.onnx  tanh.onnx
test/models/torchscript/: add_module.pt  addmm.pt  convolution2d.pt  div_scale_trace_module.pt  div_trace_module.pt  embedding_padding_idx_trace_module.pt  linear_script_module.pt  permute_trace_module.pt  tanh_trace_module.pt
test/nnfusion/common/: data_buffer.cpp  data_buffer.hpp
test/nnfusion/core/: graph_pass.cpp  kernel_emitter.cpp  pass_kernel_inplace.cpp  tagable.cpp
test/nnfusion/engine/: autodiff.cpp  profiler.cpp
test/nnfusion/frontend/: onnx_import.cpp  tensorflow_import.cpp  torchscript_import.cpp
test/nnfusion/inventory/: abs.cpp  add.cpp  and.cpp  arg_max.cpp  arg_min.cpp  broadcast.cpp  ceiling.cpp  concat.cpp  convert.cpp  divide.cpp  dot.cpp  equal.cpp  floor.cpp  greater.cpp  greater_eq.cpp  less.cpp  less_eq.cpp  max.cpp  max_pool.cpp  maximum.cpp  min.cpp  minimum.cpp  multiply.cpp  negative.cpp  not.cpp  not_equal.cpp  one_hot.cpp  or.cpp  pad.cpp  product.cpp  relu.cpp  relu_backprop.cpp  replace_slice.cpp  reshape.cpp  reverse.cpp  select.cpp  sign.cpp  slice.cpp  sqrt.cpp  subtract.cpp  (+1 more)
test/nnfusion/kernels/: addn.cpp  apply_momentum.cpp  batch_test.cpp  dynamic_stitch.cpp  invert_permutation_test.cpp  sample.cpp  sparse_apply_momentum.cpp  strided_slice_grad.cpp  tile.cpp  unsorted_segment_sum.cpp
test/nnfusion/scripts/: config.json  e2e_tests.py  e2e_tests_tfmodels_bert_train.py  e2e_tests_tfmodels_bert_train_rocm.py  e2e_tests_tfmodels_cuda.py  e2e_tests_tfmodels_rocm.py  e2e_trace_diff.py  tf_run_frozen_with_trace.py
test/nnfusion/test_util/: all_close.cpp  all_close.hpp  common.hpp  inventory.hpp  ndarray.hpp  random.hpp
test/python/: README.md  default_operators.txt  nnfusion_wsl_codegen_server.py  onnx_test.py  onnx_test_win.py  requirements.txt  run_onnx_test.py  run_onnx_test.sh  run_user_list_compare.sh  test_config.py  test_jit.py  test_snapshot_compare.py  test_userlist_compare.py
test/python/dsl_frontend/: README.md  custom_op.py  example.py  export_json_graph.py  ir_parser.py  kernel_packer.py  run_tuned_json_graph.py
test/python/ground_truth/: default.csv  float16.csv  float64.csv  input_as_constant.csv  user_failed_list.csv  user_pass_list.csv
(+3805 files in other folders)
